@@ -34,6 +34,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/bsd">BSD</license>
  <notes>
+* [mms] Fix displaying From address in notification when filtering with IMAP driver.
 * [jan] Catch if files don&apos;t exist while deleting with VFS transport (michael-dev@fami-braun.de, Bug #10494).
 * [mms] Additional fixes when creating new mailboxes (Bug #10282).
  </notes>
